Fix page load metrics flake, and re-enable test.

Page load metrics browser tests sometimes want to assert that
no page load metrics are logged for a given page load.

They do this by checking to see that no PageLoad.* histograms
were logged, but excluding PageLoad.Internal.* histograms,
which are considered internal and thus allowed to be logged
during non tracked page loads.

Recently, the PageLoadMetricsBrowserTest.NonHttpOrHttpsUrl
test started flaking on Windows, due to
PageLoad.Experimental.Renderer.* metrics being logged during
this page load.

These are really internal metrics, so should use the
PageLoad.Internal.* naming convention, which also allows them
to be ignored by this test.


Bug: 794408
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I593adf3b8c995e50b74431cc89e782cf4456abff
Reviewed-on: https://chromium-review.googlesource.com/826386
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Kunihiko Sakamoto <ksakamoto@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Charlie Harrison <csharrison@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524335}
Former-commit-id: 7221ce9c43366b8ea5fe64a6cd7418875c30c272